--- a/index.html
+++ b/index.html
@@ -70,13 +70,7 @@
             background-color: #1c2a4a;
         }
 
-        #cropArea {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        #imageContainer {
+        .image-container {
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
@@ -85,8 +79,8 @@
 
         .croppedImage {
             position: relative;
-            width: 600px;
-            height: 600px;
+            width: 150px;
+            height: 150px;
             overflow: hidden;
             border: 2px dashed #ddd;
             background-color: #f1f1f1;
@@ -100,27 +94,47 @@
             height: auto;
         }
 
-        #formConfirmation {
-            margin-top: 20px;
-            font-size: 1rem;
-            color: #333;
-            font-weight: bold;
+        .removeBtn {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 5px;
+            cursor: pointer;
+            border-radius: 50%;
         }
 
-        .hidden {
-            display: none;
+        @media screen and (max-width: 600px) {
+            h2 {
+                font-size: 2rem;
+            }
+
+            form input, form textarea {
+                max-width: 100%;
+            }
+
+            button {
+                width: 100%;
+            }
+
+            .image-container {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
 <body>
 
-<div class="container">
+<div class="container" id="formContainer">
     <h2>Seera Custom Photo Magnet</h2>
-    
+
+    <!-- Form Section -->
     <form id="orderForm">
         <div>
-            <label for="customerName">Customer Name</label>
-            <input type="text" id="customerName" name="customerName" required placeholder="Enter your name">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required placeholder="Enter your name">
         </div>
 
         <div>
@@ -129,33 +143,52 @@
         </div>
 
         <div>
-            <label for="address">Delivery Address</label>
-            <textarea id="address" name="address" required placeholder="Enter your delivery address"></textarea>
+            <label for="address">Address</label>
+            <textarea id="address" name="address" required placeholder="Enter your address"></textarea>
         </div>
 
-        <div>
-            <label for="photos">Upload Your Photos (Max 5)</label>
-            <input type="file" id="photos" name="photos" accept="image/*" multiple required>
-        </div>
+        <button type="button" onclick="showPhotoAdjustment()">Next: Choose Photos</button>
+    </form>
+</div>
 
-        <div id="cropArea" class="hidden">
-            <h3>Adjust Your Photos</h3>
-            <div id="imageContainer"></div>
-        </div>
+<div class="container" id="photoAdjustmentContainer" style="display:none;">
+    <h2>Adjust Your Photos</h2>
 
-        <div id="formConfirmation" class="hidden">
-            <p>Your order has been submitted successfully! We will get back to you shortly.</p>
-        </div>
+    <!-- Photo Upload Section -->
+    <input type="file" id="photos" multiple accept="image/*" />
+    <div class="image-container" id="imageContainer"></div>
 
+    <!-- Submit Section -->
+    <form id="submitForm" action="mailto:youremail@example.com" method="post" enctype="multipart/form-data">
         <button type="submit">Submit Order</button>
     </form>
 </div>
 
 <script>
+    // Show photo adjustment section after form submission
+    function showPhotoAdjustment() {
+        // Collect form data
+        const name = document.getElementById('name').value;
+        const phoneNumber = document.getElementById('phoneNumber').value;
+        const address = document.getElementById('address').value;
+
+        if (!name || !phoneNumber || !address) {
+            alert('Please fill out all fields!');
+            return;
+        }
+
+        // Hide form, show photo adjustment
+        document.getElementById('formContainer').style.display = 'none';
+        document.getElementById('photoAdjustmentContainer').style.display = 'block';
+    }
+
+    let photos = [];
+
+    // Handle image file input
     document.getElementById('photos').addEventListener('change', function(event) {
         const files = event.target.files;
         const imageContainer = document.getElementById('imageContainer');
-        imageContainer.innerHTML = ''; // Clear the existing images
+        imageContainer.innerHTML = ''; // Clear existing images
 
         if (files.length > 5) {
             alert('You can upload a maximum of 5 photos.');
@@ -168,42 +201,26 @@
                 const img = document.createElement('img');
                 img.src = e.target.result;
                 img.classList.add('croppedImage');
-                img.width = 600;
-                img.height = 600;
+                img.width = 150;
+                img.height = 150;
+
+                const removeBtn = document.createElement('button');
+                removeBtn.innerText = 'X';
+                removeBtn.classList.add('removeBtn');
+                removeBtn.addEventListener('click', function() {
+                    photos = photos.filter(photo => photo !== e.target.result);
+                    imageContainer.removeChild(img.parentElement);
+                });
 
                 const imageDiv = document.createElement('div');
                 imageDiv.appendChild(img);
+                imageDiv.appendChild(removeBtn);
                 imageContainer.appendChild(imageDiv);
+
+                photos.push(e.target.result);
             };
             reader.readAsDataURL(file);
         });
-
-        document.getElementById('cropArea').classList.remove('hidden');
-    });
-
-    document.getElementById('orderForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-
-        const customerName = document.getElementById('customerName').value;
-        const phoneNumber = document.getElementById('phoneNumber').value;
-        const address = document.getElementById('address').value;
-
-        const formData = new FormData();
-        formData.append('customerName', customerName);
-        formData.append('phoneNumber', phoneNumber);
-        formData.append('address', address);
-
-        const photos = document.getElementById('photos').files;
-        Array.from(photos).forEach(photo => {
-            formData.append('photos', photo);
-        });
-
-        // Here, you would typically send this data to the server via AJAX or fetch API
-        // For now, let's simulate an API call
-
-        setTimeout(() => {
-            document.getElementById('formConfirmation').classList.remove('hidden');
-        }, 1000);
     });
 </script>
 
