--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seera - Custom Photo Magnet</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" />
     <style>
         body {
             font-family: 'Open Sans', sans-serif;
-            background-color: #f9f9f9;
+            background-color: #f4f4f9;
             margin: 0;
             padding: 0;
         }
@@ -38,7 +39,7 @@
         }
 
         form input, form textarea {
-            padding: 12px;
+            padding: 14px;
             border-radius: 8px;
             border: 1px solid #ddd;
             font-size: 1rem;
@@ -50,6 +51,27 @@
         form textarea {
             height: 100px;
             resize: none;
+        }
+
+        .upload-container {
+            margin-top: 20px;
+        }
+
+        .image-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+            max-width: 100%;
+        }
+
+        #cropContainer {
+            width: 100%;
+            max-width: 600px;
+            height: auto;
+        }
+
+        .hidden {
+            display: none;
         }
 
         button {
@@ -70,68 +92,28 @@
             background-color: #1c2a4a;
         }
 
-        .image-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
+        #formConfirmation {
+            margin-top: 20px;
+            font-size: 1rem;
+            color: #333;
+            font-weight: bold;
         }
 
-        .croppedImage {
-            position: relative;
-            width: 150px;
-            height: 150px;
-            overflow: hidden;
-            border: 2px dashed #ddd;
-            background-color: #f1f1f1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .croppedImage img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        .removeBtn {
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 5px;
-            cursor: pointer;
-            border-radius: 50%;
-        }
-
-        @media screen and (max-width: 600px) {
+        @media (max-width: 768px) {
             h2 {
                 font-size: 2rem;
             }
-
-            form input, form textarea {
-                max-width: 100%;
-            }
-
-            button {
-                width: 100%;
-            }
-
-            .image-container {
-                flex-direction: column;
-            }
         }
+
     </style>
 </head>
 <body>
 
-<div class="container" id="formContainer">
+<div class="container">
     <h2>Seera Custom Photo Magnet</h2>
-
-    <!-- Form Section -->
+    
     <form id="orderForm">
+        <!-- Customer Info -->
         <div>
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required placeholder="Enter your name">
@@ -144,83 +126,103 @@
 
         <div>
             <label for="address">Address</label>
-            <textarea id="address" name="address" required placeholder="Enter your address"></textarea>
+            <textarea id="address" name="address" required placeholder="Enter your delivery address"></textarea>
         </div>
 
-        <button type="button" onclick="showPhotoAdjustment()">Next: Choose Photos</button>
-    </form>
-</div>
+        <!-- Photo Upload Section -->
+        <div class="upload-container">
+            <label for="photos">Upload Your Photos (Max 5)</label>
+            <input type="file" id="photos" name="photos" accept="image/*" multiple required>
+        </div>
 
-<div class="container" id="photoAdjustmentContainer" style="display:none;">
-    <h2>Adjust Your Photos</h2>
+        <!-- Image Adjustment Section -->
+        <div id="cropArea" class="hidden">
+            <h3>Adjust Your Photo</h3>
+            <div class="image-container">
+                <img id="imageToCrop" src="" alt="Your uploaded image" />
+            </div>
+        </div>
 
-    <!-- Photo Upload Section -->
-    <input type="file" id="photos" multiple accept="image/*" />
-    <div class="image-container" id="imageContainer"></div>
+        <!-- Submit Section -->
+        <div id="formConfirmation" class="hidden">
+            <p>Your order has been submitted successfully! We will get back to you shortly.</p>
+        </div>
 
-    <!-- Submit Section -->
-    <form id="submitForm" action="mailto:youremail@example.com" method="post" enctype="multipart/form-data">
         <button type="submit">Submit Order</button>
     </form>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
 <script>
-    // Show photo adjustment section after form submission
-    function showPhotoAdjustment() {
-        // Collect form data
-        const name = document.getElementById('name').value;
-        const phoneNumber = document.getElementById('phoneNumber').value;
-        const address = document.getElementById('address').value;
+    let cropper;
 
-        if (!name || !phoneNumber || !address) {
-            alert('Please fill out all fields!');
-            return;
-        }
+    // Initialize cropper when an image is uploaded
+    function initializeCropper(imageSrc) {
+        const image = document.getElementById('imageToCrop');
+        image.src = imageSrc;
 
-        // Hide form, show photo adjustment
-        document.getElementById('formContainer').style.display = 'none';
-        document.getElementById('photoAdjustmentContainer').style.display = 'block';
+        // Initialize the Cropper
+        cropper = new Cropper(image, {
+            aspectRatio: 1, // Aspect ratio of 1:1 (square)
+            viewMode: 1, // Restrict the crop box to the image's size
+            autoCropArea: 0.5, // Default crop area is 50%
+            movable: true, // Allow image to be moved
+            zoomable: true, // Allow zooming
+            scalable: true, // Allow scaling
+            crop: function(event) {
+                const canvas = cropper.getCroppedCanvas();
+                const croppedImage = document.getElementById('croppedImage');
+                croppedImage.src = canvas.toDataURL(); // Update with cropped image data
+            }
+        });
     }
 
-    let photos = [];
-
-    // Handle image file input
+    // Handle the file selection and initialize cropper
     document.getElementById('photos').addEventListener('change', function(event) {
         const files = event.target.files;
-        const imageContainer = document.getElementById('imageContainer');
-        imageContainer.innerHTML = ''; // Clear existing images
+        const imageContainer = document.querySelector('.image-container');
+        imageContainer.innerHTML = ''; // Clear the previous images
 
         if (files.length > 5) {
             alert('You can upload a maximum of 5 photos.');
             return;
         }
 
-        Array.from(files).forEach(file => {
-            const reader = new FileReader();
-            reader.onload = function(e) {
-                const img = document.createElement('img');
-                img.src = e.target.result;
-                img.classList.add('croppedImage');
-                img.width = 150;
-                img.height = 150;
+        // Load the first selected image for cropping
+        const reader = new FileReader();
+        reader.onload = function(e) {
+            const imageSrc = e.target.result;
+            initializeCropper(imageSrc);
+            document.getElementById('cropArea').classList.remove('hidden');
+        };
+        reader.readAsDataURL(files[0]); // Read first file
+    });
 
-                const removeBtn = document.createElement('button');
-                removeBtn.innerText = 'X';
-                removeBtn.classList.add('removeBtn');
-                removeBtn.addEventListener('click', function() {
-                    photos = photos.filter(photo => photo !== e.target.result);
-                    imageContainer.removeChild(img.parentElement);
-                });
+    // Submit form handler
+    document.getElementById('orderForm').addEventListener('submit', function(event) {
+        event.preventDefault();
 
-                const imageDiv = document.createElement('div');
-                imageDiv.appendChild(img);
-                imageDiv.appendChild(removeBtn);
-                imageContainer.appendChild(imageDiv);
+        const name = document.getElementById('name').value;
+        const phoneNumber = document.getElementById('phoneNumber').value;
+        const address = document.getElementById('address').value;
 
-                photos.push(e.target.result);
-            };
-            reader.readAsDataURL(file);
+        const formData = new FormData();
+        formData.append('name', name);
+        formData.append('phoneNumber', phoneNumber);
+        formData.append('address', address);
+
+        const photos = document.getElementById('photos').files;
+        Array.from(photos).forEach(photo => {
+            formData.append('photos', photo);
         });
+
+        // Simulate an API call with a confirmation message
+        setTimeout(() => {
+            document.getElementById('formConfirmation').classList.remove('hidden');
+        }, 1000);
+
+        // Here you can handle the form data and send it to your server or email
+        // For example, use EmailJS to send formData to your email
     });
 </script>
 
