--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <div class="container">
     <h2>Seera Custom Photo Magnet</h2>
     
-    <form id="orderForm">
+    <form id="orderForm" action="process_form.php" method="POST" enctype="multipart/form-data">
         <!-- Customer Info -->
         <div>
             <label for="name">Name</label>
